{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 42,
  "lineage": "4db6b06b-f6fc-8a90-3633-d48b1747be9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod-nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02270c43f24940624",
            "domain": "vpc",
            "id": "eipalloc-0ab9d43cc0e713679",
            "network_interface": "eni-0d9cd4a60540be8ed",
            "private_dns": "ip-10-100-1-65.ec2.internal",
            "private_ip": "10.100.1.65",
            "public_dns": "ec2-54-165-110-37.compute-1.amazonaws.com",
            "public_ip": "54.165.110.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-web1",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:372093060897:instance/i-085655d3a459b6902",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085655d3a459b6902",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083cda7fbc081eddf",
            "private_dns": "ip-10-100-1-147.ec2.internal",
            "private_ip": "10.100.1.147",
            "public_dns": "ec2-52-90-212-162.compute-1.amazonaws.com",
            "public_ip": "52.90.212.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d07ebeb5d54338d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-047419ea2014e9d8a",
              "sg-0e2b09a3d50200eb9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064fb5fc273622b13",
            "tags": {
              "Name": "prod-web1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047419ea2014e9d8a",
              "sg-0e2b09a3d50200eb9"
            ]
          },
          "dependencies": [
            "aws_security_group.inbound-http_https-allowed",
            "aws_security_group.inbound-ssh-allowed-restricted",
            "aws_subnet.prod-subnet-public1-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f2c5cc6119cf772a",
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab9d43cc0e713679",
            "id": "nat-05a39d65ac9505af1",
            "network_interface_id": "eni-0d9cd4a60540be8ed",
            "private_ip": "10.100.1.65",
            "public_ip": "54.165.110.37",
            "subnet_id": "subnet-064fb5fc273622b13",
            "tags": {
              "Name": "prod-natgw"
            }
          },
          "dependencies": [
            "aws_eip.prod-nat-eip",
            "aws_subnet.prod-subnet-public1-1a",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-nat-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0185849a6af68859d",
            "owner_id": "372093060897",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05a39d65ac9505af1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-nat-rt"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_nat_gateway.prod-natgw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae33f85a3c6c6ae6",
            "owner_id": "372093060897",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2c5cc6119cf772a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-rt"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-rta-private-subnet3-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b6863d4548d9ea",
            "route_table_id": "rtb-0185849a6af68859d",
            "subnet_id": "subnet-0675d344fe08c9de1"
          },
          "dependencies": [
            "aws_eip.prod-nat-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-nat-rt",
            "aws_subnet.prod-subnet-private3-1a",
            "aws_subnet.prod-subnet-public1-1a",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-rta-private-subnet4-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4694e1628217980",
            "route_table_id": "rtb-0185849a6af68859d",
            "subnet_id": "subnet-00fc82638f3eaa2d2"
          },
          "dependencies": [
            "aws_eip.prod-nat-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-nat-rt",
            "aws_subnet.prod-subnet-private4-1b",
            "aws_subnet.prod-subnet-public1-1a",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-rta-public-subnet1-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03653825af53e1343",
            "route_table_id": "rtb-0ae33f85a3c6c6ae6",
            "subnet_id": "subnet-064fb5fc273622b13"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-rt",
            "aws_subnet.prod-subnet-public1-1a",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-rta-public-subnet2-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab350a3ee8d2b78d",
            "route_table_id": "rtb-0ae33f85a3c6c6ae6",
            "subnet_id": "subnet-0991385bf37aa03ae"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-rt",
            "aws_subnet.prod-subnet-public2-1b",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound-http_https-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:security-group/sg-047419ea2014e9d8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047419ea2014e9d8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inbound-http_https-allowed",
            "name_prefix": null,
            "owner_id": "372093060897",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inbound-http_https-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound-ssh-allowed-restricted",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:security-group/sg-0e2b09a3d50200eb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2b09a3d50200eb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.91.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "inbound-ssh-allowed-restricted",
            "name_prefix": null,
            "owner_id": "372093060897",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inbound-ssh-allowed-restricted"
            },
            "timeouts": null,
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-local5-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-0eddea1a9609b70a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.5.0/24",
            "id": "subnet-0eddea1a9609b70a7",
            "map_public_ip_on_launch": false,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-local5-1a"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-local6-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-062c6317d9a2a6bac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.6.0/24",
            "id": "subnet-062c6317d9a2a6bac",
            "map_public_ip_on_launch": false,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-local6-1b"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private3-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-0675d344fe08c9de1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.3.0/24",
            "id": "subnet-0675d344fe08c9de1",
            "map_public_ip_on_launch": false,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-private3-1a"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private4-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-00fc82638f3eaa2d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.4.0/24",
            "id": "subnet-00fc82638f3eaa2d2",
            "map_public_ip_on_launch": false,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-private4-1b"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public1-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-064fb5fc273622b13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-064fb5fc273622b13",
            "map_public_ip_on_launch": true,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-public1-1a"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public2-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:subnet/subnet-0991385bf37aa03ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.2.0/24",
            "id": "subnet-0991385bf37aa03ae",
            "map_public_ip_on_launch": true,
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-subnet-public2-1b"
            },
            "vpc_id": "vpc-043c90c3ff00605ec"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:372093060897:vpc/vpc-043c90c3ff00605ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0f6153c7f50266bfd",
            "default_route_table_id": "rtb-02a7c0c20341b5826",
            "default_security_group_id": "sg-0c06a97834496b5c8",
            "dhcp_options_id": "dopt-0b94ad6170d2fc9fe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-043c90c3ff00605ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a7c0c20341b5826",
            "owner_id": "372093060897",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}